--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@testing-library/jest-dom": "^6.0.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^14.4.3",
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.0.0",
+    "puppeteer": "^18.1.0",
+    "puppeteer-core": "^21.1.0"
   }
 }
